# gini-bayes-paper

./: .gitignore  LICENSE  Makefile  README.md  gini-bayes.tex  pyproject.toml
scripts/: continuous_kde.py  five_band_example.py  make_compare_figure.py
