[project]
name = "gini-bayes-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pydocstyle>=6.3.0",
    "ruff>=0.15.17",
]

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true
